Initial commit from template

--- a/hints/oduvan.html
+++ b/hints/oduvan.html
@@ -2,60 +2,72 @@
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 1}}
+    Como elevar um número a uma potência em Python?
+
+
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 1}}
+    Você pode usar o operador de potência **: resultado = base ** expoente
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 2}}
+    Como lidar com índices fora do alcance?
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 2}}
+    Para verificar se um índice está dentro do alcance da lista, você pode usar uma condição:
+
+<pre class="brush: python">
+lista = [10, 20, 30]
+N = 2
+if N < len(lista):
+    valor = lista[N]
+else:
+    valor = -1
+</pre>
+Isso ajuda a evitar erros ao acessar índices que não existem na lista.
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 3}}
+    5
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 3}}
+    6
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 4}}
+    7
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 4}}
+    8
    </p>
   </div>
  </div>
  <div class="question-answer">
   <div class="question">
    <p>
-    {{DUVIDA 5}}
+    9
    </p>
   </div>
   <div class="answer">
    <p>
-    {{DICA 5}}
+    10
    </p>
   </div>
  </div>
