--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,1 @@
-{{RESUMO}}
+Elevar um valor na lista à N-ésima potência. [Utilização de Índices em Coleções; Operações Aritméticas Básicas.; Lógica Condicional e de Decisões].
