--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,22 +1,22 @@
 <!-- Describe task in general -->
 <p>
-    {{TIPO}}
+    <strong>Prática:</strong> Reforce o conhecimento adquirido. Aplique as técnicas aprendidas e repita os exercícios até se sentir confiante.
 </p>
 <h4>Enunciado</h4>
 
 <p>
-    {{ENUNCIADO}}
+    Roberta, uma estudante de matemática, está aprendendo sobre índices e potências em suas aulas de programação. Para praticar, ela quer escrever uma função que encontre o N-ésimo valor em uma lista e eleve esse valor à N-ésima potência. Se N estiver fora do alcance da lista, retorne -1.
 </p>
 
 
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Entrada: </strong> {{ENTRADA}}
+    <strong>Entrada: </strong> Dois argumentos: uma lista de inteiros positivos e um número inteiro N.
 </p>
 
 <p>
-    <strong>Saída: </strong> {{SAIDA}}
+    <strong>Saída: </strong> Um número inteiro.
 </p>
 
 
@@ -32,11 +32,13 @@ countConsecutiveSummers(99) == 6
 </pre>
 {% else %}
 <pre class="brush: python">
-    {{EXEMPLOS}}
+    indice_exponencial([2, 3, 4, 5], 2) >> 9  # 3^2
 </pre>
 {% endif %}
 </div>
 <h4>Habilidades</h4>
 <ul>
-    {{HABILIDADES}}
+    <li>Utilização de Índices em Coleções</li>
+<li>Operações Aritméticas Básicas</li>
+<li>Lógica Condicional e de Decisões</li>
 </ul>
